--- a/AzureBatchQueue/AzureBatchQueue.csproj
+++ b/AzureBatchQueue/AzureBatchQueue.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Azure.Storage.Queues" Version="12.16.0" />
+    </ItemGroup>
+
 </Project>
