--- a/AzureBatchQueue.Tests/AzureBatchQueue.Tests.csproj
+++ b/AzureBatchQueue.Tests/AzureBatchQueue.Tests.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="NUnit" Version="3.13.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AzureBatchQueue\AzureBatchQueue.csproj" />
+    </ItemGroup>
+
 </Project>
