--- a/AzureBatchQueue/AzureBatchQueue.csproj
+++ b/AzureBatchQueue/AzureBatchQueue.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Azure.Storage.Queues" Version="12.16.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
