Move sample projects to Sample directory

--- a/Samples/SendReceiveBatch/SendReceiveBatch.csproj
+++ b/Samples/SendReceiveBatch/SendReceiveBatch.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AzureBatchQueue\AzureBatchQueue.csproj" />
+      <ProjectReference Include="..\..\AzureBatchQueue\AzureBatchQueue.csproj" />
     </ItemGroup>
 
     <ItemGroup>
