--- a/AzureBatchQueue.Tests/AzureBatchQueue.Tests.csproj
+++ b/AzureBatchQueue.Tests/AzureBatchQueue.Tests.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="FluentAssertions" Version="6.12.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
       <PackageReference Include="NUnit" Version="3.13.3" />
+      <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     </ItemGroup>
 
     <ItemGroup>
