--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,7 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/v}
-      - name: Build and push the package package
+      - name: Build and push the package
         if: steps.vars.outputs.tag != null
         run: |
           dotnet pack --no-restore --no-build --configuration Release --include-symbols --include-source -p:SymbolPackageFormat=snupkg -p:PackageVersion=${{ steps.vars.outputs.tag }} -o output/${{ steps.vars.outputs.tag }} AzureBatchQueue/
