--- a/AzureBatchQueue/AzureBatchQueue.csproj
+++ b/AzureBatchQueue/AzureBatchQueue.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.19.0" />
       <PackageReference Include="Azure.Storage.Queues" Version="12.16.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
