--- a/AzureBatchQueue/AzureBatchQueue.csproj
+++ b/AzureBatchQueue/AzureBatchQueue.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Azure.Storage.Blobs" Version="12.19.0" />
       <PackageReference Include="Azure.Storage.Queues" Version="12.16.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.0" />
     </ItemGroup>
 
 </Project>
