--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,11 +47,14 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/v}
-      - name: Build and push the package
+      - name: Build packages
         if: steps.vars.outputs.tag != null
         run: |
           dotnet pack --no-restore --no-build --configuration Release --include-symbols --include-source -p:SymbolPackageFormat=snupkg -p:PackageVersion=${{ steps.vars.outputs.tag }} -o output/${{ steps.vars.outputs.tag }} AzureBatchQueue/
-          dotnet nuget push output/${{ steps.vars.outputs.tag }}/*.nupkg --api-key ${{ secrets.NUGET_API_TOKEN }} --source https://api.nuget.org/v3/index.json
+          dotnet pack --no-restore --no-build --configuration Release --include-symbols --include-source -p:SymbolPackageFormat=snupkg -p:PackageVersion=${{ steps.vars.outputs.tag }} -o output/${{ steps.vars.outputs.tag }} AzureBatchQueue.JsonNet/
+      - name: Push packages
+        if: steps.vars.outputs.tag != null
+        run: dotnet nuget push output/${{ steps.vars.outputs.tag }}/*.nupkg --api-key ${{ secrets.NUGET_API_TOKEN }} --source https://api.nuget.org/v3/index.json
       - name: Create release
         if: steps.vars.outputs.tag != null
         uses: softprops/action-gh-release@v2
