--- a/AzureBatchQueue.Tests/AzureBatchQueue.Tests.csproj
+++ b/AzureBatchQueue.Tests/AzureBatchQueue.Tests.csproj
@@ -14,10 +14,10 @@
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
       <PackageReference Include="NUnit" Version="3.13.3" />
       <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AzureBatchQueue.JsonNet\AzureBatchQueue.JsonNet.csproj" />
       <ProjectReference Include="..\AzureBatchQueue\AzureBatchQueue.csproj" />
     </ItemGroup>
 
