Add missing permissions for dorny test reporter
https://github.com/dorny/test-reporter/issues/149#issuecomment-1004820190

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,11 @@ on:
   - push
   - pull_request
 
+permissions:
+  id-token: write
+  contents: read
+  checks: write
+
 jobs:
   build:
     name: Build
